# vanilla-rnn

./: README.md  main.py  pyproject.toml  rnn.py  train.py
