[tool.poetry]
name = "vanilla-rnn"
version = "0.1.0"
description = "Vanilla RNN implementation in Pytorch"
authors = ["Kim Young Jin <kimyoungjin1001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
